--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ngx-loading-bar/core": "^4.2.0",
+    "@ngx-loading-bar/router": "^4.2.0",
+    "@ngx-progressbar/core": "^4.1.0",
     "angular-imask": "^5.2.1",
     "angular-in-memory-web-api": "^0.9.0",
     "bootstrap": "^4.4.1",
