--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ before_script:
   - npm install -g @angular/cli
 script:
 - ng lint
+- ng test
 - ng build --prod --base-href https://github.com/rpelizza/finansys
