--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@ngx-loading-bar/core": "^4.2.0",
         "@ngx-loading-bar/router": "^4.2.0",
         "@ngx-progressbar/core": "^4.1.0",
+        "@sentry/browser": "^5.10.2",
         "angular-imask": "^5.2.1",
         "angular-in-memory-web-api": "^0.9.0",
         "bootstrap": "^4.4.1",
