--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "@angular/router": "~8.2.14",
         "@ngx-loading-bar/core": "^4.2.0",
         "@ngx-loading-bar/router": "^4.2.0",
-        "@ngx-progressbar/core": "^4.1.0",
-        "@sentry/browser": "^5.10.2",
+        "@ngx-progressbar/core": "^4.3.0",
+        "@sentry/browser": "^5.11.0",
         "angular-imask": "^5.2.1",
         "angular-in-memory-web-api": "^0.9.0",
         "bootstrap": "^4.4.1",
@@ -39,13 +39,13 @@
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.803.20",
-        "@angular/cli": "~8.3.20",
+        "@angular-devkit/build-angular": "^0.803.22",
+        "@angular/cli": "^8.3.22",
         "@angular/compiler-cli": "~8.2.14",
         "@angular/language-service": "~8.2.14",
-        "@types/node": "~8.9.4",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
         "codelyzer": "^5.0.0",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
